--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,9 @@
     "require": {
         "php": ">=5.3.3"
     },
+	"require-dev": {
+      "phpbb/epv": "dev-master"
+   },
     "extra": {
         "display-name": "Live Search ( as in google)",
 		"soft-require": {
