--- a/config/services.yml
+++ b/config/services.yml
@@ -25,3 +25,4 @@ services:
             - @service_container
             - @pagination
             - @content.visibility
+            - %core.table_prefix%
