update contact fields

--- a/config/services.yml
+++ b/config/services.yml
@@ -26,3 +26,4 @@ services:
             - @pagination
             - @content.visibility
             - %core.table_prefix%
+            - @profilefields.manager
