--- a/config/services.yml
+++ b/config/services.yml
@@ -7,6 +7,7 @@ services:
             - @user
             - %core.root_path%
             - %core.php_ext%
+            - @auth
         tags:
             - { name: event.listener }
     alg.liveSearch.live_search_ajax_handler:
