--- a/config/services.yml
+++ b/config/services.yml
@@ -28,3 +28,4 @@ services:
             - @content.visibility
             - %core.table_prefix%
             - @profilefields.manager
+            - @dispatcher
