--- a/config/routing.yml
+++ b/config/routing.yml
@@ -1,6 +1,6 @@
 
 live_search_controller:
-    path: /liveSearch/{action}/{forum}/{user}
+    path: /liveSearch/{action}/{forum}/{topic}/{user}
     defaults: { _controller: alg.liveSearch.live_search_ajax_handler:main }
     requirements:
         forum: \d+
