--- a/config/routing.yml
+++ b/config/routing.yml
@@ -1,5 +1,5 @@
 liveSearch_controller:
     path: /liveSearch/{action}/{forum}/{topic}/{user}
-    defaults: { _controller: alg.liveSearch.liveSearch_ajax_handler:main }
+    defaults: { _controller: alg.liveSearch.livesearch_ajax_handler:main }
     requirements:
         forum: \d+
