--- a/composer.json
+++ b/composer.json
@@ -2,13 +2,13 @@
     "name": "alg/liveSearch",
     "type": "phpbb-extension",
     "description": "Live Search (as in Google)",
-    "homepage": "http://www.phpbbguru.net",
-    "version": "1.0.6",
-    "time": "2014-06-12",
+    "homepage": "https://github.com/alg5/quicklanguage",
+    "version": "1.0.7",
+    "time": "2015-01-31",
     "license": "GPL-2.0",
     "authors": [
         {
-            "name": "Алг",
+            "name": "Alg",
             "homepage": "http://www.chugunok.net",
             "role": "Developer"
         }
@@ -20,9 +20,9 @@
 	"require-dev": {
       "phpbb/epv": "dev-master"
    },
-    "extra": {
+	"extra": {
         "display-name": "Live Search ( as in google)",
-		"soft-require": {
+        "soft-require": {
            "phpbb/phpbb": "3.1.*@dev"
         },
         "version-check": {
