--- a/composer.json
+++ b/composer.json
@@ -2,9 +2,9 @@
     "name": "alg/liveSearch",
     "type": "phpbb-extension",
     "description": "Live Search (as in Google)",
-    "homepage": "https://github.com/alg5/quicklanguage",
-    "version": "2.0.1",
-    "time": "2015-01-31",
+    "homepage": "https://github.com/alg5/liveSearch",
+    "version": "2.0.2",
+    "time": "2016-04-25",
     "license": "GPL-2.0",
     "authors": [
         {
