--- a/config/routing.yml
+++ b/config/routing.yml
@@ -3,3 +3,5 @@ alg_liveSearch_controller:
     defaults: { _controller: alg.liveSearch.livesearch_ajax_handler:main }
     requirements:
         forum: \d+
+        topic: \d+
+        user: \d+
