--- a/composer.json
+++ b/composer.json
@@ -3,8 +3,8 @@
     "type": "phpbb-extension",
     "description": "Live Search (as in Google)",
     "homepage": "https://github.com/alg5/liveSearch/tree/dev_3.2.x",
-    "version": "3.0.3",
-    "time": "2016-05-05",
+    "version": "3.0.4",
+    "time": "2020-05-16",
     "license": "GPL-2.0",
     "authors": [
         {
@@ -17,10 +17,13 @@
     "require": {
         "php": ">=5.4.2"
     },
+      "require-dev": {
+      "phpbb/epv": "dev-master"
+   },
     "extra": {
         "display-name": "Live Search (as in google)",
         "soft-require": {
-           "phpbb/phpbb": ">=3.2.0"
+           "phpbb/phpbb": "3.2.*@dev"
         },
         "version-check": {
             "host": "alg5.github.io",
